src/components/Info/Info.css
.background_image {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    object-fit: cover;
    z-index: -1;
    opacity: 0.25;
    border-radius: 20px;
}

.landscape {
    display: none;
}

.portrait {
    display: block;
}

.InfoModal {
    display: flex;
    flex-direction: column;
    height: 100%;
    width: 100%;
    overflow-y: scroll;
    scrollbar-width: none;
}

.fav_button {
    position: absolute;
    top: 0;
    right: 15px;
    cursor: pointer;
}

.heart {
    display: flex;
    color: #D1D5DB;
}

.close {
    position: absolute;
    top: 0;
    left: 15px;
    cursor: pointer;
}

.mini_poster {
    display: none;
}

.landscape_poster {
    display: flex;
    justify-content: center;
}

.InfoModal_landscape {
    width: 90%;
    border-radius: 10px;
}

.InfoModal_about {
    padding: 10px;
    display: flex;
    flex-direction: column;
}

.InfoModal_title {
    text-align: center;
    margin: 10px;
}

.tagline {
    margin: 10px auto;
    font-weight: 500;
}

.genre_list {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    margin: 10px 0 0;
}

.InfoModal_genre {
    border: 2px solid white;
    padding: 0.5% 2% 1%;
    margin: 0.5%;
    border-radius: 30px;
}

.InfoModal_details {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
}

.rating {
    display: flex;
    align-items: center;
}

.InfoModal_description {
    padding: 15px;
    border-radius: 20px;
    scrollbar-width: thin;
    box-shadow: inset 0 0 5px #000000;
    text-align: justify;
}

.InfoModal_description::-webkit-scrollbar {
    display: none;
}

.trailer {
    font-size: 1rem;
    color: white;
    background-color: #0c87e3;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 10px 0;
    margin-top: 10px;
    cursor: pointer;
    border: 1px hidden black;
    border-radius: 20px;
}

@media(min-width:1000px) {
    .portrait {
        display: none
    }

    .landscape {
        display: block;
    }

    .mini_poster {
        display: flex;
        justify-content: center;
        width: 50%;
        flex-direction: column;
        align-items: center;
    }

    .InfoModal_portrait {
        display: flex;
        width: 60%;
        border-radius: 15px;
    }

    .landscape_poster {
        display: none;
    }

    .InfoModal {
        flex-direction: row;
    }

    .InfoModal_about {
        width: 50%;
        padding: 0;
        height: 100%;
    }

    .InfoModal_title {
        font-size: 2.5em;
    }

    .InfoModal_details {
        font-size: 1.3rem;
    }
}

